--- a/src/main.css
+++ b/src/main.css
@@ -9,6 +9,7 @@ body {
 
 @media print {
   body {
+    print-color-adjust: exact !important;
     -webkit-print-color-adjust: exact !important;
   }
 
