--- a/src/Viewer.css
+++ b/src/Viewer.css
@@ -124,6 +124,7 @@
   display: flex;
   justify-content: space-between;
   min-height: 400px;
+  max-height: 500px;
 }
 
 #viewer .performanceItem {
@@ -152,6 +153,9 @@
     margin: auto;
     max-height: 100%;
     max-width: 100%;
+}
+#viewer.isSecretMode .performanceImageBody {
+  filter: blur(5px);
 }
 
 #viewer .performanceTextWrapper {
