--- a/src/Editor.css
+++ b/src/Editor.css
@@ -1,5 +1,22 @@
 #editor {
   width: 100%;
-  height: 100%;
-  background-color:antiquewhite;
+  padding: 20px 15px;
+  word-wrap: break-word;
+}
+
+#editor .formContent:not(:first-child) {
+  margin-top: 20px;
+}
+
+#editor .formLabel {
+  display: block;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+#editor .formTextArea {
+  display: block;
+  width: 100%;
+  height: 150px;
+  resize: vertical;
 }
