--- a/src/editor/Editor.css
+++ b/src/editor/Editor.css
@@ -8,10 +8,16 @@
   margin-top: 20px;
 }
 
+#editor .formLabelWrapper{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
 #editor .formLabel {
   display: block;
   font-size: 20px;
   font-weight: bold;
+  line-height: 2;
 }
 
 #editor .formTextArea {
